changes for downgrade to java 11.. compatible with jenkins