@@ -8,6 +8,7 @@ import mydrinkshop.service.validator.StocValidator;
 import mydrinkshop.service.validator.Validator;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StocService {
 
@@ -73,7 +74,7 @@ public class StocService {
 
             List<Stoc> ingredienteStoc = stocRepo.findAll().stream()
                     .filter(s -> s.getIngredient().equalsIgnoreCase(ingredient))
-                    .toList();
+                    .collect(Collectors.toList());
 
             double ramas = necesar;
 
